# GithubReleaseStats

./: .gitmodules  App.cpp  CMakeLists.txt  README.md  StatsWindow.cpp  StatsWindow.h
StyleSheet/dark/: StatsWindow.qss
StyleSheet/light/: StatsWindow.qss
